# PMlib

./: CMakeLists.txt  ChangeLog.md  Readme.md
doc/: CMakeLists.txt  Readme_doc.md
doc/api_C++/: PerfMonitor.h
doc/log_reports/: x.spack-stream-cpp.sh
doc/scripts/Fugaku-v10.0/: x.spack-pybind-numpy.sh  x.spack-stream-cpp.sh
doc/scripts/Fugaku-v9.2/: x.spack-cpp-fmix-flops.sh  x.spack-fort-thread.sh
doc/scripts/GNU-v9.2/: x.cmake-prepost-gnu.sh  x.run-example-gnu.sh
doc/scripts/Intel-v9.2/: x.cmake-prepost-intel-papi5.6.sh  x.cmake-prepost-intel-papi6.0.sh  x.cmake-prepost-intel.sh  x.cmake-prepost-precise.sh  x.run-example-intel.sh  x.run-example-mpi.sh
doc/scripts/obsolete/Intel/: x.user-cxx-intel-mpi.sh  x.user-cxx-serial-debug.sh  x.user-cxx-serial-thread.sh  x.user-fort-intel.sh
doc/scripts/obsolete/fx100/: x.run-examples-mpi.sh  x.user-FCCpx-fx100.sh  x.user-mpiFCCpx-fx100.sh
doc/scripts/v10.0-Fugaku/: x.spack-cpp-fmix.sh  x.spack-fort-thread.sh
doc/scripts/v9.2-Fugaku/: x.spack-pybind-mpi4py.sh
doc/scripts/v9.2-Intel/: x.run-example-serial.sh
doc/src_advanced/: main_dgemm.cpp  main_mix_precision.cpp  main_sgemm.cpp  main_stream.cpp  python_mpi4py.py  python_numpy_matmul.py  serial_stream.cpp  sub_dgemm.cpp  sub_mix.f90  sub_sgemm.f90  sub_stream.c
doc/src_tutorial/: mxm.c  mxm.cpp
example/: CMakeLists.txt
example/test1/: main_pmlib.cpp
src/: CMakeLists.txt  PerfCpuType.cpp  PerfMonitor.cpp
src_otf_ext/: CMakeLists.txt
src_papi_ext/: CMakeLists.txt
src_power_ext/: CMakeLists.txt
